--- a/style.css
+++ b/style.css
@@ -179,3 +179,62 @@
         color: white;
     }
   }
+
+  @media (max-width: 400px)
+  {
+    .max-width{
+        padding: 0 50px;
+    }
+
+    .hamburger-menu {
+        display: block;
+        z-index: 999;
+    }
+
+    .hamburger-menu i.active:before{
+        content: "\f00d";
+    }
+
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: black;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s ease-in;
+    }
+
+    .navbar .menu.active{
+        left: 0;
+    }
+
+    .navbar .menu li{
+        display: block;
+    }
+
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+
+    .navbar.prstnt .menu li a{
+        color: white;
+    }
+
+    .home .home-content .hello-text{
+        font-size: 60px;
+        color: white;
+    }
+    
+    .home .home-content .jeph {
+        font-size: 120px;
+        font-weight: 600;
+        font-family: 'Circular Black';
+        animation: colorRotate 6s linear 0s infinite;
+    }
+    
+  }
