--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@
     }
   }
 
-  @media screen and (min-width: 500px) and (max-width: 900px)
+  @media screen and (max-width: 500px)
   {
     .max-width{
         padding: 0 50px;
