--- a/style.css
+++ b/style.css
@@ -180,7 +180,10 @@
     }
   }
 
-  @media screen and (max-width: 500px)
+  @media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
   {
     .max-width{
         padding: 0 50px;
