responsiveness and font update

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Circular Black"; 
-    src: url("//db.onlinewebfonts.com/t/790b3c13fc2762b72a49fcefab324514.eot");
+    src: url("fonts/Circular\ Black/");
 }
 
 .max-width{
