--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'););
+
 *{
     margin: 0;
     padding: 0;
@@ -5,11 +7,11 @@
     text-decoration: none;
 
 }
-
+/*
 @font-face {
     font-family:"Circular Black";
     src:url(/fonts/CircularBlack/CircularBlack.ttf); 
-}
+}*/
 
 .max-width{
     max-width: 1300px;
@@ -23,7 +25,7 @@
     position: fixed;
     width: 100%;
     padding: 25px 0;
-    font-family: 'Circular Black';
+    font-family: 'Montserrat', sans-serif;
     transition: all 0.3s ease;
 }
 
@@ -31,7 +33,7 @@
     position: fixed;
     width: 100%;
     padding: 10px 0;
-    font-family: 'Circular Black';
+    font-family: 'Montserrat', sans-serif;
     background: #fff;
 }
 
@@ -91,7 +93,7 @@
     display: flex;
     background: black;
     height: 100vh;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .home .max-width{
@@ -106,7 +108,7 @@
 .home .home-content .jeph {
     font-size: 90px;
     font-weight: 600;
-    font-family: 'Circular Black';
+    font-family: 'Montserrat', sans-serif;
     animation: colorRotate 6s linear 0s infinite;
 }
 
@@ -215,9 +217,9 @@
     }
     
     .home .home-content .jeph {
-        font-size: 30px;
+        font-size: 50px;
         font-weight: 600;
-        font-family: 'Circular Black';
+        font-family: 'Montserrat', sans-serif;
         animation: colorRotate 6s linear 0s infinite;
     }
     
