--- a/style.css
+++ b/style.css
@@ -440,6 +440,154 @@ section{
     
   }
 
+  @media only screen 
+  and (min-device-width: 220px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 4)
+  {
+    .max-width{
+        padding: 0 50px;
+    }
+
+    .hamburger-menu {
+        display: block;
+        z-index: 999;
+    }
+
+    .hamburger-menu i.active:before{
+        content: "\f00d";
+    }
+
+    .navbar .menu{
+        position: fixed;
+        height: 100vh;
+        width: 100%;
+        left: -100%;
+        top: 0;
+        background: black;
+        text-align: center;
+        padding-top: 80px;
+        transition: all 0.3s ease-in;
+    }
+
+    .navbar .menu.active{
+        left: 0;
+    }
+
+    .navbar .menu li{
+        display: block;
+    }
+
+    .navbar .menu li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 25px;
+    }
+
+    .navbar.prstnt .menu li a{
+        color: white;
+    }
+
+    .home .home-content .hello-text{
+        font-size: 20px;
+        color: white;
+    }
+    
+    .home .home-content .jeph {
+        font-size: 50px;
+        font-weight: 600;
+        font-family: 'Montserrat', sans-serif;
+        animation: colorRotate 6s linear 0s infinite;
+    }
+
+    .me .about-me{
+        font-family: 'Roboto', sans-serif;
+        font-weight: 200;
+        color: white;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .xp {
+        font-family: Arial, Helvetica, sans-serif;
+        background:#ffffff
+    }
+    
+    .xp .title{
+        font-family: 'Montserrat', san-serif;
+        font-size:30px;
+        font-weight: 700;
+        padding-bottom: 20px;
+        margin-bottom: 10px;
+        color:rgb(0, 0, 0)
+    
+    }
+    
+    .xp .xp-inv{
+        font-family: 'Roboto', sans-serif;
+        font-weight: 200;
+        color: rgb(0, 0, 0);
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .xp .xp-inv .left{
+        width: 100%;
+    }
+    
+    .xp .xp-inv .right{
+        width: 55%;
+        margin-bottom: 30px;
+    }
+    
+    .xp .xp-inv .left img{
+        height:100px;
+        width: 250px;
+        object-fit: contain;
+    }
+    
+    .xp .xp-inv .right p{
+        text-align: justify;
+        font-size: 15px;
+        font-weight: 300;
+    }
+    
+    .xp .xp-inv .right a{
+        display: inline-block;
+        text-align: center;
+        background: rgb(0, 110, 255);
+        color: white;
+        font-size: 15px;
+        padding: 10px 30px;
+        margin-top:20px;
+        border-radius: 6px;
+        border: 2px solid rgb(255, 255, 255);
+        transition: all 0.4s ease;
+    }
+    
+    .xp .xp-inv .right a:hover{
+        color: rgb(0, 0, 0);
+        background:rgb(255, 255, 255);
+    }
+    
+
+    .xp .org-title{
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 400;
+        color: rgb(240, 0, 0);
+        margin-bottom: 2px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+  } 
+
 @keyframes colorRotate {
     from {
         color: #dc143c;
