--- a/style.css
+++ b/style.css
@@ -290,10 +290,15 @@ section{
 
   /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .column {
-      flex: 100%;
-      max-width: 20%;
-      align-items: center;
+    .techstack img {
+        display:block;
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-top: 20px;
+        float:none;
+        width: 50px;
+        height: 50px;
+        object-fit: contain;
     }
   }
 
