--- a/style.css
+++ b/style.css
@@ -670,6 +670,17 @@ section{
         align-items: center;
         justify-content: space-between;
     }
+
+    .techstack img {
+        display:block;
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-top: 20px;
+        float:none;
+        width: 50px;
+        height: 50px;
+        object-fit: contain;
+    }
     
   }
 
