--- a/style.css
+++ b/style.css
@@ -671,6 +671,17 @@ section{
         justify-content: space-between;
     }
 
+        
+    .techstack .title{
+        font-family: 'Montserrat', san-serif;
+        font-size:30px;
+        font-weight: 700;
+        padding-bottom: 20px;
+        margin-bottom: 10px;
+        color:rgb(0, 0, 0)
+    
+    }
+
     .techstack img {
         display:block;
         margin-left: 5px;
