--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ section{
 
 .xp .xp-inv .left{
     width: 45%;
+    justify-content: center;
 }
 
 .xp .xp-inv .right{
@@ -672,7 +673,7 @@ section{
     }
 
         
-    .techstack .title{
+    .skills .title{
         font-family: 'Montserrat', san-serif;
         font-size:30px;
         font-weight: 700;
