--- a/style.css
+++ b/style.css
@@ -269,15 +269,15 @@ transform: scale(1.5);
 }
 
 .skills .left {
-  width: 40%;
+  width: 80%;
 }
 
 .skills .right {
-  margin-left:auto;
   margin-right: 0;
-  margin-bottom: 0
-  display: block;
-  width: 40%;
+  margin-bottom: 0;
+  display: flex;
+  object-fit: fill;
+  width: 10%;
   overflow-y: hidden;
 }
 
@@ -325,14 +325,14 @@ transform: scale(1.5);
 }
 
 .techstack img {
-  width: 25%;
-  height:25%;
+  width: 40%;
+  height:40%;
 
   display: inline-block;
   margin-left: 10px;
   margin-right: 10px;
-  margin-top: auto;
-  margin-bottom:auto;
+  margin-top: 10px;
+  margin-bottom:10px;
   object-fit: contain;
 
 }
