--- a/style.css
+++ b/style.css
@@ -269,19 +269,22 @@ transform: scale(1.5);
 }
 
 .skills .left {
-  width: 80%;
+  width: 60%;
 }
 
+/*
+
 .skills .right {
+  margin-left:auto;
   margin-right: 0;
   margin-bottom: 0;
   display: flex;
-  object-fit: fill;
-  width: 10%;
+  object-fit:
+  width: 40%;
   overflow-y: hidden;
 }
 
-
+*/
 .skills .title {
   font-family: 'Montserrat', san-serif;
   font-size: 50px;
@@ -314,19 +317,19 @@ transform: scale(1.5);
 }
 
 /* techstack images --------------------------------------------------------------------------------------------*/
-.techstack {
-/*
+/*.techstack {
+
   padding: 0 4px;
   margin-top: 15px;
   padding-right: 10px;
-  font-size: 4rem;*/
+  font-size: 4rem;
   float: left;
   flex-wrap: wrap;
 }
 
 .techstack img {
-  width: 40%;
-  height:40%;
+  width: 25%;
+  height:25%;
 
   display: inline-block;
   margin-left: 10px;
