--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
   overflow-x: hidden;
 }
 
+p {
+  line-height: 1.4;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -217,12 +221,9 @@ transform: scale(1.5);
 .xp .xp-inv .left img {
   max-height: 50%;
   width: 90%;
-  text-align: justify;
-  display: block;
+  display: flex;
   object-fit: scale-down;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
+  margin: auto auto 10px auto;
 }
 
 .xp .xp-inv .right p {
@@ -248,9 +249,10 @@ transform: scale(1.5);
 
 .xp .org-title {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+  font-weight: 700;
   color: #871128;
-  margin-bottom: 10px;
+  position: relative;
+  top: 17px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -264,22 +266,20 @@ transform: scale(1.5);
 }
 
 .skills .wrap {
-  display: flex;
+  display: inline-flex;
   flex-wrap: wrap;
 }
 
 .skills .left {
-  width: 50%;
-  margin-right: 10px;
-}
-
-
-
-.skills .right {
-  margin-left: auto;
-  margin-right: 0;
+  margin-right: auto;
+  margin-left: 10px;
   margin-bottom: 0;
   width: 40%;
+
+}
+.skills .right {
+  width: 50%;
+  margin-right: 10px;
 }
 
 
@@ -296,10 +296,7 @@ transform: scale(1.5);
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: black;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  list-style-type: circle;
 }
 
 .skills .sktitle {
@@ -741,7 +738,6 @@ transform: scale(1.5);
   .xp .org-title {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    color: rgb(240, 0, 0);
     margin-bottom: 2px;
     display: flex;
     flex-wrap: wrap;
