--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ section {
 /* navbar style */
 .navbar {
   position: fixed;
+  z-index: 1;
   width: 100%;
   padding: 25px 0;
   font-family: 'Montserrat', sans-serif;
@@ -42,6 +43,7 @@ section {
 
 .navbar.prstnt {
   position: fixed;
+  z-index: 1;
   width: 100%;
   padding: 10px 0;
   font-family: 'Montserrat', sans-serif;
